# diffraction-lib

./: .badgery.yaml  .codefactor.yml  .gitignore  .pre-commit-config.yaml  404.html  BADGES.md  DEVELOPMENT.md  LICENSE  README.md  codecov.yml  codefactor.yml  example.py  index.html  joint-refinement_advanced-api.py  joint-refinement_simple-api.py  joint_refinement_gui_style.py  objects.inv  out.prof  pixi-wheel.toml  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  versions.json
.github/: release-drafter.yml
0.10.0/: 404.html  index.html  sitemap.xml
0.10.1/: 404.html  index.html  sitemap.xml
0.10.2/: 404.html  index.html  sitemap.xml
0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
0.8.0.post1/: 404.html  index.html  objects.inv  sitemap.xml
0.8.1/: 404.html  index.html  sitemap.xml
0.8.2/: 404.html  index.html  mkdocs.yml  sitemap.xml
0.9.0/: 404.html  index.html  sitemap.xml
0.9.1/: 404.html  index.html  sitemap.xml
api-reference/: index.html
dev/: 404.html  index.html  mkdocs.yml  objects.inv  sitemap.xml
docs/: index.md  mkdocs.yml
examples/: fix-output-example.py  joint-fit_advanced-api.py  joint-fit_advanced-usage.py  joint-fit_basic-usage.py  joint-fit_simple-api.py  joint-fit_single-dataset.py  joint-fit_split-single-dataset.py  joint-refinement_advanced-api.py  joint-refinement_simple-api.py  joint-refinement_weighting.py  pdf.py  single-fit_basic-usage.py  single-pdf-fit_Al2O3.py  single-pdf-fit_NaCl.py  single-pdf-fit_Ni.py  single-pdf-fit_Si.py  single-pdf-fit_SrFe2As2_246K.py  single-pdf-fit_usage.py  symmetry-constraints.py
installation-and-setup/: index.html
introduction/: index.html
latest/: 404.html  index.html
search/: search_index.json
tmp/: _gemmi.py  _read_cif.py  basic_single-fit_pd-neut-cwl_LBCO-HRPT.py  quick_single-fit_pd-neut-cwl_LBCO-HRPT.py  short.py
tools/: block-pixi-sha256.py  cleanup_docs.sh  create_mkdocs-yml.py  create_mkdocs_yml.py  discard-pixi-sha256.py  fix_find_links.py  make_badges.py  nb_prepare_notebooks.py  nb_uncomment_cells.py  nb_uncomment_pip.py  prepare_docs.sh  prepare_notebooks.py  temp_test.sh  test_scripts.py  tweak_notebooks.py  update_spdx-headers.py  update_spdx.py
(+1421 files in other folders)
