###############################
# Configuration for the project
###############################

[project]
name = 'easydiffraction'
version = '0.6.0'
description = 'Diffraction data analysis'
authors = [{ name = 'EasyDiffraction contributors' }]
readme = 'README.md'
license = { file = 'LICENSE' }
classifiers = [
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3',
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Programming Language :: Python :: 3.13",
]
requires-python = '>3.9,<3.14'
dependencies = [
  'colorama',
  'tabulate',
  'varname',
  'pandas',

  'asciichartpy',
  'plotly<6.1.0',
  'darkdetect',

  'pooch',

  'scipy',

  'lmfit',
  'bumps',
  'dfo-ls',

  'gemmi',
  'sympy',

  'cryspy',
  'diffpy.utils',
  'diffpy.pdffit2',

  'asteval',

  'pytest',
  'pytest-xdist',
  'nbmake',
  'nbstripout',

  'mkdocs',
  'mkdocs-material',
  'mkdocs-autorefs<1.3.0',
  'mkdocs-jupyter',
  'mkdocs-plugin-inline-svg',
  'mkdocs-markdownextradata-plugin',
  'mkdocstrings-python',
  'pyyaml'
]

[project.urls]
homepage = 'https://easydiffraction.org'
documentation = 'https://easyscience.github.io/diffraction-lib'
source = 'https://github.com/easyscience/diffraction-lib'
tracker = 'https://github.com/easyscience/diffraction-lib/issues'

############################
# Build system configuration
############################

# Build system 'hatch' -- Python project manager
# https://hatch.pypa.io/

# Versioning system 'versioningit' -- Versioning from git tags
# https://versioningit.readthedocs.io/

[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling']

#############################
# Configuration for hatchling
#############################

[tool.hatch.build.targets.wheel]
packages = ['src/easydiffraction']

[tool.hatch.metadata]
allow-direct-references = true
